--- a/notebooks/ro/T02_Generalitati.ipynb
+++ b/notebooks/ro/T02_Generalitati.ipynb
@@ -106,13 +106,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "mQ3b8qTA8iPd",
-        "outputId": "0d2e195a-0a39-4f2f-bf6d-988dbb9f7063"
+        "outputId": "59d00508-8b32-4247-b27d-6c571b0beeaa"
       },
       "outputs": [
         {
@@ -2075,15 +2075,26 @@
     {
       "cell_type": "code",
       "source": [
-        "## REZOLVARE EX. 1\n",
-        "\n",
-        "test"
+        "a= 3.14\n",
+        "print(hex(id(a)))"
       ],
       "metadata": {
-        "id": "nlwC9NZHWvA1"
+        "id": "nlwC9NZHWvA1",
+        "outputId": "cf3177f2-8300-44b6-b496-286e62f161fb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0x7e99e72a9b50\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2097,13 +2108,26 @@
     {
       "cell_type": "code",
       "source": [
-        "## REZOLVARE EX. 2"
+        "a = 3.14\n",
+        "print(dir(a))"
       ],
       "metadata": {
-        "id": "cTXcF-IaWwab"
+        "id": "cTXcF-IaWwab",
+        "outputId": "f2ef1e5d-42ca-4c78-c551-a66eb0c819aa",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['__abs__', '__add__', '__bool__', '__ceil__', '__class__', '__delattr__', '__dir__', '__divmod__', '__doc__', '__eq__', '__float__', '__floor__', '__floordiv__', '__format__', '__ge__', '__getattribute__', '__getformat__', '__getnewargs__', '__gt__', '__hash__', '__init__', '__init_subclass__', '__int__', '__le__', '__lt__', '__mod__', '__mul__', '__ne__', '__neg__', '__new__', '__pos__', '__pow__', '__radd__', '__rdivmod__', '__reduce__', '__reduce_ex__', '__repr__', '__rfloordiv__', '__rmod__', '__rmul__', '__round__', '__rpow__', '__rsub__', '__rtruediv__', '__setattr__', '__setformat__', '__sizeof__', '__str__', '__sub__', '__subclasshook__', '__truediv__', '__trunc__', 'as_integer_ratio', 'conjugate', 'fromhex', 'hex', 'imag', 'is_integer', 'real']\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2117,13 +2141,26 @@
     {
       "cell_type": "code",
       "source": [
-        "## REZOLVARE EX. 3"
+        "text = \"buna seara barosane\"\n",
+        "print(text.split())"
       ],
       "metadata": {
-        "id": "SknWSKOtWx6T"
+        "id": "SknWSKOtWx6T",
+        "outputId": "06af346b-6f00-4261-f50c-aea0f7d1d050",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['buna', 'seara', 'barosane']\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2137,13 +2174,30 @@
     {
       "cell_type": "code",
       "source": [
-        "## REZOLVARE EX. 4"
+        "pip install flask\n"
       ],
       "metadata": {
-        "id": "QyF2LqfLWzCj"
+        "id": "QyF2LqfLWzCj",
+        "outputId": "11e61ea0-68b7-400d-84e2-324e087b868a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Requirement already satisfied: flask in /usr/local/lib/python3.10/dist-packages (2.2.5)\n",
+            "Requirement already satisfied: Werkzeug>=2.2.2 in /usr/local/lib/python3.10/dist-packages (from flask) (3.0.0)\n",
+            "Requirement already satisfied: Jinja2>=3.0 in /usr/local/lib/python3.10/dist-packages (from flask) (3.1.2)\n",
+            "Requirement already satisfied: itsdangerous>=2.0 in /usr/local/lib/python3.10/dist-packages (from flask) (2.1.2)\n",
+            "Requirement already satisfied: click>=8.0 in /usr/local/lib/python3.10/dist-packages (from flask) (8.1.7)\n",
+            "Requirement already satisfied: MarkupSafe>=2.0 in /usr/local/lib/python3.10/dist-packages (from Jinja2>=3.0->flask) (2.1.3)\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2157,12 +2211,12 @@
     {
       "cell_type": "code",
       "source": [
-        "## REZOLVARE EX. 5"
+        "!pip freeze > requirements-notebook.txt"
       ],
       "metadata": {
         "id": "RYqCvWmDW1I9"
       },
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -2177,13 +2231,35 @@
     {
       "cell_type": "code",
       "source": [
-        "## REZOLVARE EX. 6"
+        "a=1\n",
+        "b=1\n",
+        "for a in range(1000):\n",
+        "  for b in a:\n",
+        "    if a%b==0:\n",
+        "      print(a)\n"
       ],
       "metadata": {
-        "id": "GrKv-O0BW8W7"
+        "id": "GrKv-O0BW8W7",
+        "outputId": "8917ae54-8544-4367-ea71-9dcdd24d872c",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 245
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-17-d5e94d564f00>\u001b[0m in \u001b[0;36m<cell line: 3>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mb\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0ma\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1000\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m   \u001b[0;32mfor\u001b[0m \u001b[0mb\u001b[0m \u001b[0;32min\u001b[0m \u001b[0ma\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0ma\u001b[0m\u001b[0;34m%\u001b[0m\u001b[0mb\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m       \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mTypeError\u001b[0m: 'int' object is not iterable"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
