--- a/notebooks/ro/T04_Instructiuni.ipynb
+++ b/notebooks/ro/T04_Instructiuni.ipynb
@@ -3515,7 +3515,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3557,7 +3557,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3598,7 +3598,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3656,7 +3656,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "metadata": {
@@ -3724,74 +3724,25 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "numar = input()\n",
+        "print(len(numar))"
+      ],
       "metadata": {
         "id": "fS3KtII2slx1",
-        "outputId": "c4a09c06-9336-4a49-d9f7-7421ae5f9700",
+        "outputId": "78fea8c7-3869-4110-ce58-d5e5fa6ba415",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 27,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "processor\t: 0\n",
-            "vendor_id\t: GenuineIntel\n",
-            "cpu family\t: 6\n",
-            "model\t\t: 79\n",
-            "model name\t: Intel(R) Xeon(R) CPU @ 2.20GHz\n",
-            "stepping\t: 0\n",
-            "microcode\t: 0xffffffff\n",
-            "cpu MHz\t\t: 2199.998\n",
-            "cache size\t: 56320 KB\n",
-            "physical id\t: 0\n",
-            "siblings\t: 2\n",
-            "core id\t\t: 0\n",
-            "cpu cores\t: 1\n",
-            "apicid\t\t: 0\n",
-            "initial apicid\t: 0\n",
-            "fpu\t\t: yes\n",
-            "fpu_exception\t: yes\n",
-            "cpuid level\t: 13\n",
-            "wp\t\t: yes\n",
-            "flags\t\t: fpu vme de pse tsc msr pae mce cx8 apic sep mtrr pge mca cmov pat pse36 clflush mmx fxsr sse sse2 ss ht syscall nx pdpe1gb rdtscp lm constant_tsc rep_good nopl xtopology nonstop_tsc cpuid tsc_known_freq pni pclmulqdq ssse3 fma cx16 pcid sse4_1 sse4_2 x2apic movbe popcnt aes xsave avx f16c rdrand hypervisor lahf_lm abm 3dnowprefetch invpcid_single ssbd ibrs ibpb stibp fsgsbase tsc_adjust bmi1 hle avx2 smep bmi2 erms invpcid rtm rdseed adx smap xsaveopt arat md_clear arch_capabilities\n",
-            "bugs\t\t: cpu_meltdown spectre_v1 spectre_v2 spec_store_bypass l1tf mds swapgs taa mmio_stale_data retbleed\n",
-            "bogomips\t: 4399.99\n",
-            "clflush size\t: 64\n",
-            "cache_alignment\t: 64\n",
-            "address sizes\t: 46 bits physical, 48 bits virtual\n",
-            "power management:\n",
-            "\n",
-            "processor\t: 1\n",
-            "vendor_id\t: GenuineIntel\n",
-            "cpu family\t: 6\n",
-            "model\t\t: 79\n",
-            "model name\t: Intel(R) Xeon(R) CPU @ 2.20GHz\n",
-            "stepping\t: 0\n",
-            "microcode\t: 0xffffffff\n",
-            "cpu MHz\t\t: 2199.998\n",
-            "cache size\t: 56320 KB\n",
-            "physical id\t: 0\n",
-            "siblings\t: 2\n",
-            "core id\t\t: 0\n",
-            "cpu cores\t: 1\n",
-            "apicid\t\t: 1\n",
-            "initial apicid\t: 1\n",
-            "fpu\t\t: yes\n",
-            "fpu_exception\t: yes\n",
-            "cpuid level\t: 13\n",
-            "wp\t\t: yes\n",
-            "flags\t\t: fpu vme de pse tsc msr pae mce cx8 apic sep mtrr pge mca cmov pat pse36 clflush mmx fxsr sse sse2 ss ht syscall nx pdpe1gb rdtscp lm constant_tsc rep_good nopl xtopology nonstop_tsc cpuid tsc_known_freq pni pclmulqdq ssse3 fma cx16 pcid sse4_1 sse4_2 x2apic movbe popcnt aes xsave avx f16c rdrand hypervisor lahf_lm abm 3dnowprefetch invpcid_single ssbd ibrs ibpb stibp fsgsbase tsc_adjust bmi1 hle avx2 smep bmi2 erms invpcid rtm rdseed adx smap xsaveopt arat md_clear arch_capabilities\n",
-            "bugs\t\t: cpu_meltdown spectre_v1 spectre_v2 spec_store_bypass l1tf mds swapgs taa mmio_stale_data retbleed\n",
-            "bogomips\t: 4399.99\n",
-            "clflush size\t: 64\n",
-            "cache_alignment\t: 64\n",
-            "address sizes\t: 46 bits physical, 48 bits virtual\n",
-            "power management:\n",
-            "\n"
+            "86545745\n",
+            "8\n"
           ]
         }
       ]
@@ -3808,13 +3759,28 @@
     {
       "cell_type": "code",
       "source": [
-        "## REZOLVARE EX. 6"
+        "lista_initiala = [1, 4, 9, 16, 25, 36, 49, 64, 81, 100]\n",
+        "lista_patrate_perfecte = [x for x in lista_initiala if (x ** 0.5).is_integer()]\n",
+        "\n",
+        "print(lista_patrate_perfecte)"
       ],
       "metadata": {
-        "id": "ee5BHIWNsnSa"
+        "id": "ee5BHIWNsnSa",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "3e9c2bee-016a-49c0-da75-e73281bf3ee0"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1, 4, 9, 16, 25, 36, 49, 64, 81, 100]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -3831,13 +3797,29 @@
         "L = [\"Ana\", \"Maria\", \"Popescu\", \"Ion12\", \"Vasile34\", \"Gheorghe\"]\n",
         "# Output: {'Ana': 2, 'Maria': 1, 'Popescu': -1, 'Gheorghe': -1}\n",
         "\n",
-        "## REZOLVARE EX. 7"
+        "dictionar = {cheie: cheie.find('a') for cheie in L if cheie.isalpha()}\n",
+        "\n",
+        "dictionar = {cheie: valoare if valoare != -1 else -1 for cheie, valoare in dictionar.items()}\n",
+        "\n",
+        "print(dictionar)"
       ],
       "metadata": {
-        "id": "j8y9wANtsoum"
+        "id": "j8y9wANtsoum",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "02fb56a5-69da-4452-eed1-198a7366018c"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'Ana': 2, 'Maria': 1, 'Popescu': -1, 'Gheorghe': -1}\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
