--- a/notebooks/ro/T05_Functii_Module.ipynb
+++ b/notebooks/ro/T05_Functii_Module.ipynb
@@ -3998,7 +3998,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "J_5kcZfwkMxe",
         "outputId": "6e33f3dd-f2ae-46b1-cc04-ec26df18f79d",
@@ -4049,7 +4049,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4072,13 +4072,34 @@
     {
       "cell_type": "code",
       "source": [
-        "def ecuatie (x, y)"
+        "import numpy as np\n",
+        "def ecuatie (a, b, c):\n",
+        "  delta= (b**2)-(4*a*c)\n",
+        "\n",
+        "  x1= (-b + np.sqrt(delta))/(2*a)\n",
+        "  x2= (-b - np.sqrt(delta))/(2*a)\n",
+        "  print(x1, '   ', x2)\n",
+        "\n",
+        "print(ecuatie(2,5,1))"
       ],
       "metadata": {
-        "id": "ty8YK6VtCDF8"
+        "id": "ty8YK6VtCDF8",
+        "outputId": "b0538c20-fc04-413f-c7ce-a7f160e02389",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "-0.21922359359558485     -2.2807764064044154\n",
+            "None\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
